--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ $(document).ready(function () {
 
 
 <p>The code used to extract this information from the AFS-TWS conference website and to create these tables can be found <a href="https://github.com/DanielleQuinn/afs_schedule">here</a>, along with the raw HTML files created.</p>
-<p>This was a learn-to-webscrape project for me, and this schedule format is, admittedly, not particularly easy to navigate - if anyone is interested in contributing and is able to convert these tables to a shareable Google Sheet or is willing to spend the time converting this to a simple Shiny app, please feel free to submit a PR!</p>
+<p>This was a learn-to-webscrape project for me, and this schedule format is, admittedly, not particularly easy to navigate. I don't have the time at the moment to tidy up the output - but, if anyone is interested in contributing and is able to convert these tables to a shareable Google Sheet or is willing to spend the time converting this to a simple Shiny app, please feel free to submit a PR!</p>
 <p>Danielle</p>
 
 
